# learning-rust

./: .env  .env.example  Cargo.toml  README.md  makefile
data/: products.json  users.json
migrations/: 20250314205320_create_products_table.sql  20250314235157_create_users_table.sql
src/: lib.rs  main.rs
src/core/: authentication.rs  config.rs  db.rs  error.rs  mod.rs  server.rs
src/domain/: mod.rs
src/domain/product/: handler.rs  mod.rs  model.rs  repository.rs  routes.rs
src/domain/user/: mod.rs
src/modules/: mod.rs
src/modules/product/: mod.rs  model.rs  repository.rs  routes.rs  service.rs
src/modules/user/: handler.rs  mod.rs  model.rs  repository.rs  routes.rs  service.rs
src/seeder/: mod.rs  product.rs  user.rs
src/utils/: jwt.rs  mod.rs
